# xcxtool

./: .gitignore  LICENCE  README.md  SAMPLE-xcxtool.toml  characters.py  copy_current_save.py  game_timer.py  leadcli.py  probes.py  pyproject.toml  requirements.txt  structures.py  test_config.py  test_structures.py  warnings1.py  xenoprobes_output.pyw
docs/: data_types.md  gamedata.md  save_files.md
tests/: test_config.py  test_formatter.py  test_monitor_ranges.py
xcxtool/: __init__.py  __main__.py  app.py  game_timer.py  locations.py  main.py  memory_reader.py  savefiles.py
xcxtool/backup/: __init__.py  app.py  formatter.py  main.py  tokens.py
xcxtool/config/: __init__.py  defaults.py  main.py
xcxtool/data/: __init__.py  level_exp.py  load_json.py  locations.py
xcxtool/data/json/: README.md
xcxtool/monitor/: __init__.py  app.py  main.py  monitor.py
xcxtool/probes/: __init__.py  app.py  data.py  main.py
xcxtool/readers/: emulators.py  save_files.py
xcxtool/savefiles/: checksum.py  encryption.py  main.py
xcxtools/: __main__.py  app.py  backup_save.py  config.py  game_timer.py  memory_reader.py  monitor.py  savefiles.py
xcxtools/backup/: __init__.py  app.py  tokens.py
xcxtools/config/: __init__.py  defaults.py  main.py
xcxtools/data/: load_json.py  locations.py
xcxtools/monitor/: __init__.py  app.py  monitor.py
xcxtools/probes/: __init__.py  app.py  data.py
