[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xcxtool"
description = "Command line helpers for Xenoblade Chronicles X on Cemu"
requires-python = ">=3.10"
dependencies = [
    "plumbum >= 1.8.1",
    "rich >= 13.3.1",
    "Pymem >= 1.10.0",
    "pendulum >= 2.1.2",
    "obsws-python >= 1.7.0",
    "tomli >= 2.0.0 ; python_version < '3.11'",
]
dynamic = ["version"]

[project.scripts]
xcxtool = "xcxtool.app:XCXToolsCLI.run"

[tool.setuptools.packages.find]
include = ["xcxtool*"]
# Including namespace packages to allow discovery of JSON files in package-data below
namespaces = true

[tool.setuptools.package-data]
xcxtool = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "xcxtool.VERSION"}
