[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xcxtool"
description = "Command line helpers for Xenoblade Chronicles X on Cemu"
readme = "README.md"
authors = [
    {name = "SnailNail"}
]
license = { text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "plumbum >= 1.8.1",
    "rich >= 13.3.1",
    "Pymem >= 1.10.0",
    "pendulum >= 2.1.2, < 3.0",
    "obsws-python >= 1.7.0",
    "tomli >= 2.0.0 ; python_version < '3.11'",
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python 3",
]
keywords = ["xenoblade", "xenoblade x", "xenoblade chronicles x", "save"]
dynamic = ["version"]

[project.scripts]
xcxtool = "xcxtool.app:XCXToolsCLI.run"

[tool.setuptools.dynamic]
version = {attr = "xcxtool.VERSION"}
